m4_define([_YP_VERSION_MAJOR], [0])
m4_define([_YP_VERSION_MINOR], [4])
m4_define([_YP_VERSION_PATCH], [0])
m4_define([_YP_VERSION], [_YP_VERSION_MAJOR._YP_VERSION_MINOR._YP_VERSION_PATCH])

AC_INIT([YARP],[_YP_VERSION],[https://github.com/ruby/yarp/issues/new],[yarp],[https://github.com/ruby/yarp])

AC_PROG_CC
AC_C_INLINE
AC_DEFINE([_XOPEN_SOURCE], [700], [_XOPEN_SOURCE])
AC_DEFINE([YP_VERSION_MAJOR], [_YP_VERSION_MAJOR], [YP_VERSION_MAJOR])
AC_DEFINE([YP_VERSION_MINOR], [_YP_VERSION_MINOR], [YP_VERSION_MINOR])
AC_DEFINE([YP_VERSION_PATCH], [_YP_VERSION_PATCH], [YP_VERSION_PATCH])
AC_DEFINE([YP_VERSION], ["_YP_VERSION"], [YP_VERSION])

AC_CHECK_FUNCS([mmap])
AC_CHECK_FUNCS([snprintf])
AC_CHECK_FUNCS([strncasecmp])

AC_CONFIG_HEADERS([include/yarp/config.h:config.h.in])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
